# JAMES-Repo

./: CMakeLists.txt  README.md  auto_fix_headers.sh  build.sh  cmake_clang_tidy_fix.txt  cmake_clean_tools.txt  cmake_fix.sh  create_james.sh  final_evidence_fix.sh  install_dependencies.sh  quick_fix_build.sh  quick_fix_main.sh
emulator/: CMakeLists.txt
src/: main.cpp
src/bruteforce/: CMakeLists.txt
src/core/: CMakeLists.txt  android_handler.cpp  android_handler.h  audit_logger.cpp  audit_logger.h  device_info.h  device_manager.cpp  device_manager.h  evidence_manager.cpp  evidence_manager.h  extraction_session.cpp  extraction_session.h  ios_handler.cpp  ios_handler.h  james_common.h  james_engine.cpp  james_engine.h  james_result.h  security_annotations.h  security_manager.cpp  security_manager.h  usb_handler.cpp  usb_handler.h
src/core/crypto/: evidence_crypto.cpp  evidence_crypto.h  hash_chain.cpp  hash_chain.h  tamper_detection.cpp  tamper_detection.h
src/core/evidence/: chain_of_custody.cpp  chain_of_custody.h  evidence_container.cpp  evidence_container.h
src/core/utils/: config_manager.cpp  config_manager.h  logger.cpp  logger.h
src/devices/: CMakeLists.txt
src/network/: CMakeLists.txt
src/python_bindings/: CMakeLists.txt
src/services/device/: DeviceManager.cpp  DeviceManager.h
tests/: CMakeLists.txt
tools/: CMakeLists.txt
