# emulator/CMakeLists.txt - J.A.M.E.S. emulator Module
# ⚠️ Placeholder Implementation – Phase 1

message(STATUS "Configuring J.A.M.E.S. emulator module (placeholder)")

# Placeholder library to satisfy build system
add_library(james_emulator_placeholder INTERFACE)
add_library(JAMES::EMULATOR ALIAS james_emulator_placeholder)

message(STATUS "emulator module placeholder configured")
