# tests/CMakeLists.txt - J.A.M.E.S. tests Module
# ⚠️ Placeholder Implementation – Phase 1

message(STATUS "Configuring J.A.M.E.S. tests module (placeholder)")

# Placeholder library to satisfy build system
add_library(james_tests_placeholder INTERFACE)
add_library(JAMES::TESTS ALIAS james_tests_placeholder)

message(STATUS "tests module placeholder configured")
