# tools/CMakeLists.txt - J.A.M.E.S. tools Module
# ⚠️ Placeholder Implementation – Phase 1

message(STATUS "Configuring J.A.M.E.S. tools module (placeholder)")

# Placeholder library to satisfy build system
add_library(james_tools_placeholder INTERFACE)
add_library(JAMES::TOOLS ALIAS james_tools_placeholder)

message(STATUS "tools module placeholder configured")
