# src/bruteforce/CMakeLists.txt - J.A.M.E.S. bruteforce Module
# ⚠️ Placeholder Implementation – Phase 1

message(STATUS "Configuring J.A.M.E.S. bruteforce module (placeholder)")

# Placeholder library to satisfy build system
add_library(james_bruteforce_placeholder INTERFACE)
add_library(JAMES::BRUTEFORCE ALIAS james_bruteforce_placeholder)

message(STATUS "bruteforce module placeholder configured")
