# src/devices/CMakeLists.txt - J.A.M.E.S. devices Module
# ⚠️ Placeholder Implementation – Phase 1

message(STATUS "Configuring J.A.M.E.S. devices module (placeholder)")

# Placeholder library to satisfy build system
add_library(james_devices_placeholder INTERFACE)
add_library(JAMES::DEVICES ALIAS james_devices_placeholder)

message(STATUS "devices module placeholder configured")
