# src/network/CMakeLists.txt - J.A.M.E.S. network Module
# ⚠️ Placeholder Implementation – Phase 1

message(STATUS "Configuring J.A.M.E.S. network module (placeholder)")

# Placeholder library to satisfy build system
add_library(james_network_placeholder INTERFACE)
add_library(JAMES::NETWORK ALIAS james_network_placeholder)

message(STATUS "network module placeholder configured")
