# src/python_bindings/CMakeLists.txt - J.A.M.E.S. python_bindings Module
# ⚠️ Placeholder Implementation – Phase 1

message(STATUS "Configuring J.A.M.E.S. python_bindings module (placeholder)")

# Placeholder library to satisfy build system
add_library(james_python_bindings_placeholder INTERFACE)
add_library(JAMES::PYTHON_BINDINGS ALIAS james_python_bindings_placeholder)

message(STATUS "python_bindings module placeholder configured")
